--- a/example.qmd
+++ b/example.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Quarto-forms-teachr Example"
+title: "Quarto-quiz-teachr Example"
 filters:
-  - quarto-forms-teachr
+  - quarto-quiz-teachr
 format: html
 execute:
   keep-md: true
